--- a/LandingPage.html
+++ b/LandingPage.html
@@ -75,7 +75,7 @@
         </section>
         <section class="contact" id="contact">
             <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:contact@example.com">contact@example.com</a></p>
+            <p>Email: <a href="mailto:carlos.alvarez@ygrene.com">carlos.alvarez@ygren.com</a></p>
         </section>
     </div>
 </body>
