--- a/LandingPage.html
+++ b/LandingPage.html
@@ -70,8 +70,10 @@
     </header>
     <div class="container">
         <section class="main-content">
-            <h2>Communication</h2>
-            <p>We are here to communicate with you. Feel free to reach out to us with any questions or concerns you may have.</p>
+            <h2>Propuesta para Establecer un Programa de Energía Limpia con Evaluación de Propiedades (PACE) en Puerto Rico</h2>
+            <h2>Introducción</h2>
+            <p>Esta propuesta presenta un marco para implementar un programa de Energía Limpia con Evaluación de Propiedades (PACE, por sus siglas en inglés) en Puerto Rico. Basado en el exitoso modelo de la Agencia PACE de Florida, este programa busca facilitar el financiamiento para energía renovable, eficiencia energética y mejoras de resiliencia climática a través de evaluaciones de impuestos sobre la propiedad.</p>
+            <p>Aprovechando el sistema de recaudación de impuestos administrado por el Centro de Recaudación de Ingresos Municipales (CRIM), el programa puede ofrecer a los propietarios una forma rentable de mejorar sus propiedades mientras se avanzan las metas de energía limpia de Puerto Rico.</p>
         </section>
         <section class="contact" id="contact">
             <h2>Contact Us</h2>
