Update LandingPage.html 2
first list M<arco Legal

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -74,6 +74,14 @@
             <h2>Introducción</h2>
             <p>Esta propuesta presenta un marco para implementar un programa de Energía Limpia con Evaluación de Propiedades (PACE, por sus siglas en inglés) en Puerto Rico. Basado en el exitoso modelo de la Agencia PACE de Florida, este programa busca facilitar el financiamiento para energía renovable, eficiencia energética y mejoras de resiliencia climática a través de evaluaciones de impuestos sobre la propiedad.</p>
             <p>Aprovechando el sistema de recaudación de impuestos administrado por el Centro de Recaudación de Ingresos Municipales (CRIM), el programa puede ofrecer a los propietarios una forma rentable de mejorar sus propiedades mientras se avanzan las metas de energía limpia de Puerto Rico.</p>
+        <hr>
+           <h2>Características Clave del Programa Propuesto</h2>
+            <h2>1. Marco Legal y Operativo</h2>
+            <ul>
+                <li>Legislación Habilitadora: Introducir un proyecto de ley que autorice a los municipios implementar evaluaciones PACE para propiedades elegibles.</li>
+                <li>Acuerdo Intermunicipal: Similar al modelo de la Agencia PACE de Florida, los municipios se unirán a un programa centralizado para simplificar la administración y reducir costos.</li>
+                <li>Administración del Programa: El programa podrá ser administrado por una agencia pública dedicada o a través de asociaciones con administradores privados de PACE.</li>
+            </ul>
         </section>
         <section class="contact" id="contact">
             <h2>Contact Us</h2>
