Update LandingPage.html 3
first and second setion lists

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Propuesta PACE Programa de Energía Limpia con Evaluación de Propiedades en Puerto Rico</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,15 +57,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to Our Landing Page</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <h1>Bienvenido</h1>
         </div>
     </header>
     <div class="container">
@@ -75,7 +67,16 @@
             <p>Esta propuesta presenta un marco para implementar un programa de Energía Limpia con Evaluación de Propiedades (PACE, por sus siglas en inglés) en Puerto Rico. Basado en el exitoso modelo de la Agencia PACE de Florida, este programa busca facilitar el financiamiento para energía renovable, eficiencia energética y mejoras de resiliencia climática a través de evaluaciones de impuestos sobre la propiedad.</p>
             <p>Aprovechando el sistema de recaudación de impuestos administrado por el Centro de Recaudación de Ingresos Municipales (CRIM), el programa puede ofrecer a los propietarios una forma rentable de mejorar sus propiedades mientras se avanzan las metas de energía limpia de Puerto Rico.</p>
         <hr>
-           <h2>Características Clave del Programa Propuesto</h2>
+           <h2>Objetivos del Programa</h2>
+            <ol>
+                <li>LPromover la Adopción de Energía Renovable: Permitir a los propietarios financiar paneles solares, sistemas de baterías y otros proyectos de energía renovable.</li>
+                <li>Mejorar la Eficiencia Energética: Ofrecer financiamiento para mejoras que ahorren energía, como aislamiento, sistemas HVAC eficientes y alumbrado LED.</li>
+                <li>Fortalecer la Resiliencia: Apoyar proyectos que mejoren la resiliencia estructural, incluyendo ventanas resistentes a impactos, contraventanas para tormentas y medidas de mitigación de inundaciones.</li>
+                <li>Impulsar el Crecimiento Económico: Crear empleos en la construcción, energía y sectores relacionados mientras se incrementa el valor de las propiedades.</li>
+                <li>Facilitar el Acceso al Financiamiento: Ofrecer financiamiento a largo plazo con tasas fijas, vinculado a los impuestos sobre la propiedad, sin costos iniciales.</li>
+            </ol>
+        <hr>
+             <h2>Características Clave del Programa Propuesto</h2>
             <h2>1. Marco Legal y Operativo</h2>
             <ul>
                 <li>Legislación Habilitadora: Introducir un proyecto de ley que autorice a los municipios implementar evaluaciones PACE para propiedades elegibles.</li>
