Update LandingPage.html 5
single correction

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -69,7 +69,7 @@
         <hr>
            <h2>Objetivos del Programa</h2>
             <ol>
-                <li>LPromover la Adopción de Energía Renovable: Permitir a los propietarios financiar paneles solares, sistemas de baterías y otros proyectos de energía renovable.</li>
+                <li>Promover la Adopción de Energía Renovable: Permitir a los propietarios financiar paneles solares, sistemas de baterías y otros proyectos de energía renovable.</li>
                 <li>Mejorar la Eficiencia Energética: Ofrecer financiamiento para mejoras que ahorren energía, como aislamiento, sistemas HVAC eficientes y alumbrado LED.</li>
                 <li>Fortalecer la Resiliencia: Apoyar proyectos que mejoren la resiliencia estructural, incluyendo ventanas resistentes a impactos, contraventanas para tormentas y medidas de mitigación de inundaciones.</li>
                 <li>Impulsar el Crecimiento Económico: Crear empleos en la construcción, energía y sectores relacionados mientras se incrementa el valor de las propiedades.</li>
