Update LandingPage.html 5
Update with Ol and UL lists

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -76,13 +76,22 @@
                 <li>Facilitar el Acceso al Financiamiento: Ofrecer financiamiento a largo plazo con tasas fijas, vinculado a los impuestos sobre la propiedad, sin costos iniciales.</li>
             </ol>
         <hr>
-             <h2>Características Clave del Programa Propuesto</h2>
-            <h2>1. Marco Legal y Operativo</h2>
-            <ul>
-                <li>Legislación Habilitadora: Introducir un proyecto de ley que autorice a los municipios implementar evaluaciones PACE para propiedades elegibles.</li>
-                <li>Acuerdo Intermunicipal: Similar al modelo de la Agencia PACE de Florida, los municipios se unirán a un programa centralizado para simplificar la administración y reducir costos.</li>
-                <li>Administración del Programa: El programa podrá ser administrado por una agencia pública dedicada o a través de asociaciones con administradores privados de PACE.</li>
-            </ul>
+            <h2>Características Clave del Programa Propuesto</h2>
+            <ol>
+                <h2>Marco Legal y Operativo</h2>
+                <p>El programa se establecerá mediante legislación habilitadora y acuerdos intermunicipales entre los municipios y el CRIM. Los siguientes elementos guiarán su estructura:</p>
+                <ul>
+                    <li>Legislación Habilitadora: Introducir un proyecto de ley que autorice a los municipios implementar evaluaciones PACE para propiedades elegibles.</li>
+                    <li>Acuerdo Intermunicipal: Similar al modelo de la Agencia PACE de Florida, los municipios se unirán a un programa centralizado para simplificar la administración y reducir costos.</li>
+                    <li>Administración del Programa: El programa podrá ser administrado por una agencia pública dedicada o a través de asociaciones con administradores privados de PACE.</li>
+                </ul>
+            <h2>Mecanismo de Financiamiento</h2>
+                <ul>
+                    <li>Fuente de Fondos: Emitir bonos municipales o asegurar capital privado para financiar las mejoras de las propiedades.</li>
+                    <li>Términos de Repago: Los propietarios reembolsan el financiamiento mediante una evaluación especial agregada a su factura de impuestos sobre la propiedad. El término generalmente coincide con la vida útil de las mejoras (por ejemplo, 10-20 años).</li>
+                    <li>Prioridad del Gravamen: Las evaluaciones se tratarán como gravámenes senior, asegurando la seguridad del repago para los inversores.</li>
+                </ul>
+            </ol>
         </section>
         <section class="contact" id="contact">
             <h2>Contact Us</h2>
