Update LandingPage.html Flag in Header
added flag in header

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -17,7 +17,8 @@
             overflow: hidden;
         }
         header {
-            background: #333;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
+            background-size: cover;
             color: #fff;
             padding-top: 30px;
             min-height: 70px;
