--- a/LandingPage.html
+++ b/LandingPage.html
@@ -25,7 +25,7 @@
             border-bottom: #77aaff 3px solid;
         }
         header a {
-            color: #fff;
+            color: #000;
             text-decoration: none;
             text-transform: uppercase;
             font-size: 16px;
