--- a/LandingPage.html
+++ b/LandingPage.html
@@ -25,7 +25,7 @@
             border-bottom: #77aaff 3px solid;
         }
         header a {
-            color: #000;
+            color: #fff;
             text-decoration: none;
             text-transform: uppercase;
             font-size: 16px;
@@ -41,7 +41,7 @@
         }
         .main-content {
             padding: 20px;
-            background: #fff;
+            background: #000000;
             margin-top: 20px;
         }
         .contact {
