Update LandingPage.htmlNew HEader Color change
Letters?

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -19,7 +19,7 @@
         header {
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
             background-size: cover;
-            color: #fff;
+            color: #000000;
             padding-top: 30px;
             min-height: 70px;
             border-bottom: #77aaff 3px solid;
@@ -41,7 +41,7 @@
         }
         .main-content {
             padding: 20px;
-            background: #000000;
+            background: #fff;
             margin-top: 20px;
         }
         .contact {
