--- a/LandingPage.html
+++ b/LandingPage.html
@@ -13,6 +13,7 @@
         }
         .container {
             width: 80%;
+            max-width: 1200px;
             margin: auto;
             overflow: hidden;
         }
@@ -20,7 +21,7 @@
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
             background-size: cover;
             color: #000000;
-            padding-top: 30px;
+            padding: 2rem 0;
             min-height: 70px;
             border-bottom: #77aaff 3px solid;
         }
@@ -28,7 +29,7 @@
             color: #fff;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 16px;
+            font-size: 1rem;
         }
         header ul {
             padding: 0;
@@ -37,21 +38,35 @@
         header li {
             float: left;
             display: inline;
-            padding: 0 20px 0 20px;
+            padding: 0 1rem;
         }
         .main-content {
-            padding: 20px;
+            padding: 1.25rem;
             background: #fff;
-            margin-top: 20px;
+            margin-top: 1.25rem;
         }
         .contact {
             background: #333;
             color: #fff;
-            padding: 20px;
-            margin-top: 20px;
+            padding: 1.25rem;
+            margin-top: 1.25rem;
         }
         .contact h2 {
             margin-top: 0;
+        }
+        @media (max-width: 768px) {
+            .container {
+                width: 90%;
+            }
+            header li {
+                float: none;
+                display: block;
+                text-align: center;
+                padding: 0.5rem 0;
+            }
+            header ul {
+                text-align: center;
+            }
         }
     </style>
 </head>
