Update LandingPage.html Flag Ratio Scaling Edit
flag to elements ratio scaling

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -19,7 +19,7 @@
         }
         header {
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
-            background-size: cover;
+            background-size: contain;
             color: #000000;
             padding: 2rem 0;
             min-height: 70px;
