--- a/LandingPage.html
+++ b/LandingPage.html
@@ -18,12 +18,16 @@
             overflow: hidden;
         }
         header {
-            background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
-            background-size: contain;
             color: #000000;
             padding: 2rem 0;
             min-height: 70px;
             border-bottom: #77aaff 3px solid;
+        }
+        .header-content {
+            background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
+            background-size: contain;
+            padding: 2rem;
+            text-align: center;
         }
         header a {
             color: #fff;
@@ -72,7 +76,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container header-content">
             <h1>Bienvenido</h1>
         </div>
     </header>
