Update LandingPage.html HEader size and Aligment
flag and header title

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -27,7 +27,11 @@
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
             background-size: contain;
             padding: 2rem;
-            text-align: center;
+            text-align: left;
+        }
+        .header-content h1 {
+            font-size: 4rem; /* Twice the default size */
+            line-height: 1.2; /* Adjust line height for better spacing */
         }
         header a {
             color: #fff;
@@ -69,7 +73,7 @@
                 padding: 0.5rem 0;
             }
             header ul {
-                text-align: center;
+                text-align: left;
             }
         }
     </style>
