--- a/LandingPage.html
+++ b/LandingPage.html
@@ -69,7 +69,7 @@
             header li {
                 float: none;
                 display: block;
-                text-align: center;
+                text-align: left;
                 padding: 0.5rem 0;
             }
             header ul {
