--- a/LandingPage.html
+++ b/LandingPage.html
@@ -24,7 +24,7 @@
             border-bottom: #77aaff 3px solid;
         }
         .header-content {
-            background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat center center;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat left center;
             background-size: contain;
             padding: 2rem;
             text-align: left;
