--- a/LandingPage.html
+++ b/LandingPage.html
@@ -25,7 +25,7 @@
         }
         .header-content {
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat left center;
-            background-size: contain;
+            background-size: cover;
             padding: 2rem;
             text-align: left;
         }
