Update LandingPage.html Header Fade and White email

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -33,6 +33,7 @@
             background-size: cover;
             padding: 2rem;
             text-align: left;
+            opacity: 0.5; /* Adjust this value to control the fade effect */
         }
         .header-content h1 {
             font-size: 4rem; /* Twice the default size */
@@ -66,6 +67,9 @@
         }
         .contact h2 {
             margin-top: 0;
+        }
+        .contact a {
+            color: #fff; /* Change the email link color to white */
         }
         @media (max-width: 768px) {
             .container {
@@ -123,7 +127,7 @@
             </ol>
         </section>
         <section class="contact" id="contact">
-            <h2>Contact Us</h2>
+            <h2>Contactenos</h2>
             <p>Email: <a href="mailto:carlos.alvarez@ygrene.com">carlos.alvarez@ygren.com</a></p>
         </section>
     </div>
