Update LandingPage.html Solid Black Bienvenido

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -38,6 +38,7 @@
         .header-content h1 {
             font-size: 4rem; /* Twice the default size */
             line-height: 1.2; /* Adjust line height for better spacing */
+            color: #000; /* Make the header text solid black */
         }
         header a {
             color: #fff;
