--- a/LandingPage.html
+++ b/LandingPage.html
@@ -98,6 +98,29 @@
             header ul {
                 text-align: left;
             }
+            .header-content h1 {
+                font-size: 2.5rem; /* Adjust font size for smaller screens */
+            }
+            .main-content {
+                padding: 1rem;
+            }
+            .contact {
+                padding: 1rem;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                width: 95%;
+            }
+            .header-content h1 {
+                font-size: 2rem; /* Further adjust font size for very small screens */
+            }
+            .main-content {
+                padding: 0.75rem;
+            }
+            .contact {
+                padding: 0.75rem;
+            }
         }
     </style>
 </head>
