Update LandingPage.html New text for final version

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -132,36 +132,22 @@
     </header>
     <div class="container">
         <section class="main-content">
-            <h2>Propuesta para Establecer un Programa de Energía Limpia con Evaluación de Propiedades (PACE) en Puerto Rico</h2>
-            <h2>Introducción</h2>
-            <p>Esta propuesta presenta un marco para implementar un programa de Energía Limpia con Evaluación de Propiedades (PACE, por sus siglas en inglés) en Puerto Rico. Basado en el exitoso modelo de la Agencia PACE de Florida, este programa busca facilitar el financiamiento para energía renovable, eficiencia energética y mejoras de resiliencia climática a través de evaluaciones de impuestos sobre la propiedad.</p>
-            <p>Aprovechando el sistema de recaudación de impuestos administrado por el Centro de Recaudación de Ingresos Municipales (CRIM), el programa puede ofrecer a los propietarios una forma rentable de mejorar sus propiedades mientras se avanzan las metas de energía limpia de Puerto Rico.</p>
+            <h2>¡Es el momento de actuar por el futuro de Puerto Rico!</h2>
+            <p>Puerto Rico enfrenta retos históricos: los devastadores efectos del huracán Ernesto y una crisis energética que impacta a miles de familias y empresas en la isla. Sin embargo, también tenemos una oportunidad sin precedentes para construir un futuro más resiliente, sostenible y energéticamente eficiente.
+</p>
+            <p>Nuestra propuesta, el Programa de Energía Limpia con Evaluación de Propiedades (PELEP), ofrece una solución comprobada que ya está transformando comunidades en diversos estados de los Estados Unidos. Este programa permitirá a los propietarios financiar mejoras en energía renovable, eficiencia energética y resiliencia a desastres, todo a través de instrumentos legales y financiaros  que le permitiran accesar a fonos previamente no accesibles a la comunidad.</p>
         <hr>
-           <h2>Objetivos del Programa</h2>
-            <ol>
-                <li>Promover la Adopción de Energía Renovable: Permitir a los propietarios financiar paneles solares, sistemas de baterías y otros proyectos de energía renovable.</li>
-                <li>Mejorar la Eficiencia Energética: Ofrecer financiamiento para mejoras que ahorren energía, como aislamiento, sistemas HVAC eficientes y alumbrado LED.</li>
-                <li>Fortalecer la Resiliencia: Apoyar proyectos que mejoren la resiliencia estructural, incluyendo ventanas resistentes a impactos, contraventanas para tormentas y medidas de mitigación de inundaciones.</li>
-                <li>Impulsar el Crecimiento Económico: Crear empleos en la construcción, energía y sectores relacionados mientras se incrementa el valor de las propiedades.</li>
-                <li>Facilitar el Acceso al Financiamiento: Ofrecer financiamiento a largo plazo con tasas fijas, vinculado a los impuestos sobre la propiedad, sin costos iniciales.</li>
-            </ol>
-        <hr>
-            <h2>Características Clave del Programa Propuesto</h2>
-            <ol>
-                <h2>Marco Legal y Operativo</h2>
-                <p>El programa se establecerá mediante legislación habilitadora y acuerdos intermunicipales entre los municipios y el CRIM. Los siguientes elementos guiarán su estructura:</p>
-                <ul>
-                    <li>Legislación Habilitadora: Introducir un proyecto de ley que autorice a los municipios implementar evaluaciones PACE para propiedades elegibles.</li>
-                    <li>Acuerdo Intermunicipal: Similar al modelo de la Agencia PACE de Florida, los municipios se unirán a un programa centralizado para simplificar la administración y reducir costos.</li>
-                    <li>Administración del Programa: El programa podrá ser administrado por una agencia pública dedicada o a través de asociaciones con administradores privados de PACE.</li>
-                </ul>
-            <h2>Mecanismo de Financiamiento</h2>
-                <ul>
-                    <li>Fuente de Fondos: Emitir bonos municipales o asegurar capital privado para financiar las mejoras de las propiedades.</li>
-                    <li>Términos de Repago: Los propietarios reembolsan el financiamiento mediante una evaluación especial agregada a su factura de impuestos sobre la propiedad. El término generalmente coincide con la vida útil de las mejoras (por ejemplo, 10-20 años).</li>
-                    <li>Prioridad del Gravamen: Las evaluaciones se tratarán como gravámenes senior, asegurando la seguridad del repago para los inversores.</li>
-                </ul>
-            </ol>
+           <h2>Beneficios Claves del PELEP:</h2>
+            <ul>
+                <li>Fomentar la adopción de energía renovable, como paneles solares y sistemas de baterías.</li>
+                <li>Mejorar la resiliencia de las propiedades ante desastres naturales, como huracanes.</li>
+                <li>Reducir los costos energéticos y crear empleos locales en sectores clave.</li>
+                <li>Cumplir la promesa del gobierno de crear una isla mas reciliente y eficiente denergia contral el calentamiento climatico. </li>
+            </ul>
+            <p>Hacemos un llamado urgente al Gobernador y a los líderes del gobierno de Puerto Rico:</p>
+            <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
+                <p>Estamos listos para colaborar y compartir los detalles de esta propuesta innovadora que puede marcar un antes y un después para Puerto Rico. Contáctenos hoy mismo para iniciar el diálogo y tomar acción concreta.</p>
+                <p>Juntos, podemos construir una Puerto Rico más fuerte, resiliente y sostenible.</p>
         </section>
         <section class="contact" id="contact">
             <h2>Contactenos</h2>
