--- a/LandingPage.html
+++ b/LandingPage.html
@@ -18,7 +18,7 @@
             max-width: 1200px;
             margin: auto;
             overflow: hidden;
-            background: rgba(255, 255, 255, 0.8); /* Adding a white background with some transparency */
+            background: rgba(255, 255, 255, 0.6); /* Adding a semi-transparent white background */
             padding: 1rem;
             border-radius: 10px;
         }
@@ -70,11 +70,11 @@
         }
         .main-content {
             padding: 1.25rem;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.8); /* Adding a semi-transparent white background */
             margin-top: 1.25rem;
         }
         .contact {
-            background: #333;
+            background: rgba(51, 51, 51, 0.8); /* Adding a semi-transparent black background */
             color: #fff;
             padding: 1.25rem;
             margin-top: 1.25rem;
@@ -127,7 +127,7 @@
 <body>
     <header>
         <div class="container header-content">
-            <h1>Bienvenido</h1>
+            <h1>Propuesta PELEP</h1>
         </div>
     </header>
     <div class="container">
@@ -135,14 +135,14 @@
             <h2>¡Es el momento de actuar por el futuro de Puerto Rico!</h2>
             <p>Puerto Rico enfrenta retos históricos: los devastadores efectos del huracán Ernesto y una crisis energética que impacta a miles de familias y empresas en la isla. Sin embargo, también tenemos una oportunidad sin precedentes para construir un futuro más resiliente, sostenible y energéticamente eficiente.
 </p>
-            <p>Nuestra propuesta, el Programa de Energía Limpia con Evaluación de Propiedades (PELEP), ofrece una solución comprobada que ya está transformando comunidades en diversos estados de los Estados Unidos. Este programa permitirá a los propietarios financiar mejoras en energía renovable, eficiencia energética y resiliencia a desastres, todo a través de instrumentos legales y financiaros  que le permitiran accesar a fonos previamente no accesibles a la comunidad.</p>
+            <p>Nuestra propuesta, el Programa de Energía Limpia con Evaluación de Propiedades (PELEP), ofrece una solución comprobada que ya está transformando comunidades en diversos estados de los Estados Unidos. Este programa permitirá a los propietarios financiar mejoras en energía renovable, eficiencia energética y resiliencia a desastres, todo a través de instrumentos legales y financiaros  que le permitiran accesar a fonos previamente no accesibles a la comunidad.</p>
         <hr>
            <h2>Beneficios Claves del PELEP:</h2>
             <ul>
                 <li>Fomentar la adopción de energía renovable, como paneles solares y sistemas de baterías.</li>
                 <li>Mejorar la resiliencia de las propiedades ante desastres naturales, como huracanes.</li>
                 <li>Reducir los costos energéticos y crear empleos locales en sectores clave.</li>
-                <li>Cumplir la promesa del gobierno de crear una isla mas reciliente y eficiente denergia contral el calentamiento climatico. </li>
+                <li>Cumplir la promesa del gobierno de crear una isla mas reciliente y eficiente denergia contral el calentamiento climatico. </li>
             </ul>
             <p>Hacemos un llamado urgente al Gobernador y a los líderes del gobierno de Puerto Rico:</p>
             <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
