Update LandingPage.html Deleted One container

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -70,11 +70,10 @@
         }
         .main-content {
             padding: 1.25rem;
-            background: rgba(255, 255, 255, 0.8); /* Adding a semi-transparent white background */
             margin-top: 1.25rem;
         }
         .contact {
-            background: rgba(51, 51, 51, 0.8); /* Adding a semi-transparent black background */
+            background: none; /* Remove the separate background */
             color: #fff;
             padding: 1.25rem;
             margin-top: 1.25rem;
