--- a/LandingPage.html
+++ b/LandingPage.html
@@ -18,7 +18,7 @@
             max-width: 1200px;
             margin: auto;
             overflow: hidden;
-            background: rgba(255, 255, 255, 0.6); /* Adding a semi-transparent white background */
+            background: rgba(255, 255, 255, 0.4); /* Adjusted to fade 2 points more */
             padding: 1rem;
             border-radius: 10px;
         }
@@ -26,8 +26,7 @@
             color: #000000;
             padding: 2rem 0;
             min-height: 70px;
-            border-bottom: #77aaff 3px solid;
-            position: relative;
+            position: relative; /* Removed border-bottom property */
         }
         .header-content {
             position: relative;
@@ -38,7 +37,7 @@
             content: "";
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat left center;
             background-size: cover;
-            opacity: 0.5; /* Adjust this value to control the fade effect */
+            opacity: 0.3; /* Adjusted to fade 2 points more */
             position: absolute;
             top: 0;
             left: 0;
