--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -94,7 +94,7 @@
         }
         .contact::before {
             content: "";
-            background: rgba(0, 0, 0, 0.6); /* Black faded background */
+            background: rgba(0, 56, 167, 0.6); /* Changed to #0038a7 with fade */
             position: absolute;
             top: 0;
             left: 0;
