Update LandingPage.html Body And contact
Body Text unfade
contact container 2 point fade

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,6 +85,7 @@
         .main-content {
             padding: 1.25rem;
             margin-top: 1.25rem;
+            color: #333; /* Ensure text color is not faded */
         }
         .contact {
             position: relative;
@@ -94,7 +95,7 @@
         }
         .contact::before {
             content: "";
-            background: rgba(0, 56, 167, 0.6); /* Changed to #0038a7 with fade */
+            background: rgba(0, 56, 167, 0.4); /* Changed to fade 2 points more */
             position: absolute;
             top: 0;
             left: 0;
