Update LandingPage.html correction to text
text edit

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -164,7 +164,7 @@
             <h2>¡Es el momento de actuar por el futuro de Puerto Rico!</h2>
             <p>Puerto Rico enfrenta retos históricos: los devastadores efectos del huracán Ernesto y una crisis energética que impacta a miles de familias y empresas en la isla. Sin embargo, también tenemos una oportunidad sin precedentes para construir un futuro más resiliente, sostenible y energéticamente eficiente.
 </p>
-            <p>Nuestra propuesta, el Programa de Energía Limpia con Evaluación de Propiedades (PELEP), ofrece una solución comprobada que ya está transformando comunidades en diversos estados de los Estados Unidos. Este programa permitirá a los propietarios financiar mejoras en energía renovable, eficiencia energética y resiliencia a desastres, todo a través de instrumentos legales y financiaros  que le permitiran accesar a fonos previamente no accesibles a la comunidad.</p>
+            <p>Nuestra propuesta, el Programa de Energía Limpia con Evaluación de Propiedades (PELEP), ofrece una solución comprobada que ya está transformando comunidades en diversos estados de los Estados Unidos. Este programa permitirá a los propietarios financiar mejoras en energía renovable, eficiencia energética y resiliencia a desastres, todo a través de instrumentos legales y financiaros  que le permitiran accesar a fondos previamente no accesibles a la comunidad.</p>
         <hr>
            <h2>Beneficios Claves del PELEP:</h2>
             <ul>
