--- a/LandingPage.html
+++ b/LandingPage.html
@@ -175,7 +175,7 @@
             </ul>
             <p>Hacemos un llamado urgente al Gobernador y a los líderes del gobierno de Puerto Rico:</p>
             <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
-                <p>Estamos listos para colaborar y compartir los detalles de esta propuesta innovadora que puede marcar un antes y un después para Puerto Rico. Contáctenos hoy mismo para iniciar el diálogo y tomar acción concreta.</p>
+                <p>Estamos listos para colaborar y compartir los detalles de esta propuesta innovadora que puede marcar un antes y un después para Puerto Rico. <strong>Contáctenos hoy mismo para iniciar el diálogo y tomar acción concreta.</strong>.</p>
                 <p>Juntos, podemos construir una Puerto Rico más fuerte, resiliente y sostenible.</p>
         </section>
         <section class="contact" id="contact">
