--- a/LandingPage.html
+++ b/LandingPage.html
@@ -182,14 +182,14 @@
         .form-container label {
             margin-bottom: 0.5rem;
         }
-        .form-container input, .form-container textarea {
+        .form-container input {
             margin-bottom: 1rem;
             padding: 0.5rem;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .form-container button {
-            padding: 10px 20px;
+            padding: 0.75rem;
             font-size: 1rem;
             color: #fff;
             background-color: #007BFF;
@@ -234,4 +234,9 @@
         </section>
         <section class="form-container" id="registration-form">
             <h2>Registration Form</h2>
-            <form action
+            <form action="#" method="post">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                
+                <label for="email">Email:</label>
+                <input type="email" id
