Separate Pages Update LandingPage.html
Separate Registration form from main landing page

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -166,40 +166,6 @@
         .button:hover {
             background-color: #0056b3;
         }
-        .form-container {
-            padding: 1.25rem;
-            margin-top: 1.25rem;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-        }
-        .form-container h2 {
-            margin-top: 0;
-        }
-        .form-container form {
-            display: flex;
-            flex-direction: column;
-        }
-        .form-container label {
-            margin-bottom: 0.5rem;
-        }
-        .form-container input {
-            margin-bottom: 1rem;
-            padding: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .form-container button {
-            padding: 0.75rem;
-            font-size: 1rem;
-            color: #fff;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .form-container button:hover {
-            background-color: #0056b3;
-        }
     </style>
 </head>
 <body>
@@ -226,17 +192,12 @@
             <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
                 <p>Estamos listos para colaborar y compartir los detalles de esta propuesta innovadora que puede marcar un antes y un después para Puerto Rico. <strong>Contáctenos hoy mismo para iniciar el diálogo y tomar acción concreta.</strong>.</p>
                 <p>Juntos, podemos construir una Puerto Rico más fuerte, resiliente y sostenible.</p>
-                <a href="#registration-form" class="button">Register Now</a>
+                <a href="registration.html" class="button">Register Now</a>
         </section>
         <section class="contact" id="contact">
             <h2>Contactenos</h2>
             <p>Email: <a href="mailto:carlos.alvarez@ygrene.com">carlos.alvarez@ygren.com</a></p>
         </section>
-        <section class="form-container" id="registration-form">
-            <h2>Registration Form</h2>
-            <form action="#" method="post">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-                
-                <label for="email">Email:</label>
-                <input type="email" id
+    </div>
+</body>
+</html>
