--- a/registration.html
+++ b/registration.html
@@ -55,6 +55,22 @@
         .form-container button:hover {
             background-color: #0056b3;
         }
+        .back-button {
+            margin-top: 1rem;
+            padding: 0.75rem;
+            font-size: 1rem;
+            color: #fff;
+            background-color: #6c757d;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+        .back-button:hover {
+            background-color: #5a6268;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +88,7 @@
             
             <button type="submit">Contactar</button>
         </form>
+        <a href="index.html" class="back-button">Volver</a>
     </div>
 </body>
 </html>
