--- a/registration.html
+++ b/registration.html
@@ -66,7 +66,8 @@
             cursor: pointer;
             text-align: center;
             text-decoration: none;
-            display: inline-block;
+            display: block;
+            width: 100%;
         }
         .back-button:hover {
             background-color: #5a6268;
