--- a/registration.html
+++ b/registration.html
@@ -43,7 +43,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        .form-container button {
+        .form-container button, .back-button {
             padding: 0.75rem;
             font-size: 1rem;
             color: #fff;
@@ -51,26 +51,14 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-        }
-        .form-container button:hover {
-            background-color: #0056b3;
-        }
-        .back-button {
-            margin-top: 1rem;
-            padding: 0.75rem;
-            font-size: 1rem;
-            color: #fff;
-            background-color: #6c757d;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
             text-align: center;
             text-decoration: none;
             display: block;
             width: 100%;
+            margin-top: 1rem;
         }
-        .back-button:hover {
-            background-color: #5a6268;
+        .form-container button:hover, .back-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
