--- a/registration.html
+++ b/registration.html
@@ -43,7 +43,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        .form-container button, .back-button {
+        .form-container button {
             padding: 0.75rem;
             font-size: 1rem;
             color: #fff;
@@ -57,8 +57,25 @@
             width: 100%;
             margin-top: 1rem;
         }
-        .form-container button:hover, .back-button:hover {
+        .form-container button:hover {
             background-color: #0056b3;
+        }
+        .back-button {
+            padding: 0.75rem;
+            font-size: 1rem;
+            color: #fff;
+            background-color: #6c757d;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            margin-top: 1rem;
+        }
+        .back-button:hover {
+            background-color: #5a6268;
         }
     </style>
 </head>
