--- a/registration.html
+++ b/registration.html
@@ -24,6 +24,9 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 400px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .form-container h2 {
             margin-top: 0;
@@ -33,6 +36,7 @@
         .form-container form {
             display: flex;
             flex-direction: column;
+            width: 100%;
         }
         .form-container label {
             margin-bottom: 0.5rem;
@@ -42,6 +46,7 @@
             padding: 0.5rem;
             border: 1px solid #ccc;
             border-radius: 5px;
+            width: 100%;
         }
         .form-container button {
             padding: 0.75rem;
