submit connectionUpdate registration.html
connection to zapier and monday

--- a/registration.html
+++ b/registration.html
@@ -87,7 +87,7 @@
 <body>
     <div class="form-container">
         <h2>Contactanos</h2>
-        <form action="#" method="post">
+        <form action="https://hooks.zapier.com/hooks/catch/20787888/2ftg0vt/" method="post">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
            
