--- a/registration.html
+++ b/registration.html
@@ -83,11 +83,30 @@
             background-color: #5a6268;
         }
     </style>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault();
+            const form = event.target;
+            const data = new FormData(form);
+            fetch(form.action, {
+                method: form.method,
+                body: data,
+            }).then(response => {
+                if (response.ok) {
+                    window.location.href = 'thankyou.html';
+                } else {
+                    alert('There was an error submitting the form. Please try again.');
+                }
+            }).catch(error => {
+                alert('There was an error submitting the form. Please try again.');
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="form-container">
         <h2>Contactanos</h2>
-        <form action="https://hooks.zapier.com/hooks/catch/20787888/2ftg0vt/" method="post">
+        <form action="https://hooks.zapier.com/hooks/catch/20787888/2ftg0vt/" method="post" onsubmit="handleSubmit(event)">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
            
