--- a/LandingPage.html
+++ b/LandingPage.html
@@ -186,7 +186,7 @@
                 <li>Fomentar la adopción de energía renovable, como paneles solares y sistemas de baterías.</li>
                 <li>Mejorar la resiliencia de las propiedades ante desastres naturales, como huracanes.</li>
                 <li>Reducir los costos energéticos y crear empleos locales en sectores clave.</li>
-                <li>Cumplir la promesa del gobierno de crear una isla mas reciliente y eficiente denergia contral el calentamiento climatico. </li>
+                <li>Cumplir la promesa del gobierno de crear una isla mas resiliente y eficiente de energía contral el calentamiento climático. </li>
             </ul>
             <p>Hacemos un llamado urgente al Gobernador y a los líderes del gobierno de Puerto Rico:</p>
             <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
@@ -195,7 +195,7 @@
                 <a href="registration.html" class="button">Register Now</a>
         </section>
         <section class="contact" id="contact">
-            <h2>Contactenos</h2>
+            <h2>Contáctenos</h2>
             <p>Email: <a href="mailto:carlos.alvarez@ygrene.com">carlos.alvarez@ygren.com</a></p>
         </section>
     </div>
