--- a/LandingPage.html
+++ b/LandingPage.html
@@ -196,7 +196,7 @@
         </section>
         <section class="contact" id="contact">
             <h2>Contáctenos</h2>
-            <p>Email: <a href="mailto:carlos.alvarez@ygrene.com">carlos.alvarez@ygren.com</a></p>
+            <p>Email: <a href="mailto:gobierno@pelep.org">carlos.alvarez@ygren.com</a></p>
         </section>
     </div>
 </body>
