--- a/LandingPage.html
+++ b/LandingPage.html
@@ -24,7 +24,7 @@
         }
         .container::before {
             content: "";
-            background: rgba(255, 255, 255, 0.4); /* Adjusted to fade 2 points more */
+            background: rgba(255, 255, 255, 0.5); /* Adjusted to fade 1 point less */
             position: absolute;
             top: 0;
             left: 0;
@@ -52,7 +52,7 @@
             content: "";
             background: url('https://upload.wikimedia.org/wikipedia/commons/2/28/Flag_of_Puerto_Rico.svg') no-repeat left center;
             background-size: cover;
-            opacity: 0.3; /* Adjusted to fade 2 points more */
+            opacity: 0.4; /* Adjusted to fade 1 point less */
             position: absolute;
             top: 0;
             left: 0;
@@ -95,7 +95,7 @@
         }
         .contact::before {
             content: "";
-            background: rgba(0, 56, 167, 0.4); /* Changed to fade 2 points more */
+            background: rgba(0, 56, 167, 0.5); /* Changed to fade 1 point less */
             position: absolute;
             top: 0;
             left: 0;
