--- a/registration.html
+++ b/registration.html
@@ -48,6 +48,9 @@
             border-radius: 5px;
             width: 100%;
         }
+        .form-container input.error, .form-container textarea.error {
+            border-color: red;
+        }
         .form-container button {
             padding: 0.75rem;
             font-size: 1rem;
@@ -87,6 +90,23 @@
         function handleSubmit(event) {
             event.preventDefault();
             const form = event.target;
+            const inputs = form.querySelectorAll('input, textarea');
+            let valid = true;
+
+            inputs.forEach(input => {
+                if (!input.value) {
+                    input.classList.add('error');
+                    valid = false;
+                } else {
+                    input.classList.remove('error');
+                }
+            });
+
+            if (!valid) {
+                alert('Please fill in all fields.');
+                return;
+            }
+
             const data = new FormData(form);
             fetch(form.action, {
                 method: form.method,
@@ -114,7 +134,7 @@
             <input type="email" id="email" name="email" required>
                     
             <label for="comentarios">Comentarios:</label>
-            <textarea id="comentarios" name="comentarios" rows="4"></textarea>
+            <textarea id="comentarios" name="comentarios" rows="4" required></textarea>
             
             <button type="submit">Contactar</button>
         </form>
