--- a/thankyou.html
+++ b/thankyou.html
@@ -28,8 +28,10 @@
       margin-top: 0;
       color: #007BFF;
     }
+    .message-container p {
+      margin-bottom: 1.5rem;
+    }
     .back-button {
-      margin-top: 1.5rem;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
       color: #fff;
@@ -47,4 +49,11 @@
 </head>
 <body>
   <div class="message-container">
+    <h2>¡Gracias por contactarnos!</h2>
+    <p>Estaremos en contacto lo antes posible.</p>
+    <a href="LandingPage.html" class="back-button">Volver al inicio</a>
+  </div>
+</body>
+</html>
+
 
