--- a/LandingPage.html
+++ b/LandingPage.html
@@ -192,7 +192,10 @@
             <h2>¡Trabajemos juntos para implementar el PELEP y asegurar un futuro mejor para la isla!</h2>
                 <p>Estamos listos para colaborar y compartir los detalles de esta propuesta innovadora que puede marcar un antes y un después para Puerto Rico. <strong>Contáctenos hoy mismo para iniciar el diálogo y tomar acción concreta.</strong>.</p>
                 <p>Juntos, podemos construir una Puerto Rico más fuerte, resiliente y sostenible.</p>
-                <a href="registration.html" class="button">Regístrese aqui</a>
+                <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
+                  <a href="registration.html" class="button">Regístrese aquí</a>
+                  <a href="blog.html" class="button">Leer el blog</a>
+                </div>
         </section>
         <section class="contact" id="contact">
             <h2>Contáctenos</h2>
